--- a/index.html
+++ b/index.html
@@ -403,7 +403,6 @@ edition. &#124; Boca Raton : CRC Press, 2024. &#124; Series:</p>
 <h3><a href="#ch5-32">CSS Marquee Menu PLUGIN</a></h3>
 <h3><a href="#ch5-33">Chapter 5 Summary</a></h3>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2>Zeba Academy -- Mastering Computer Science</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 06. Taylor & Francis logo ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -710,18 +709,16 @@ we can use it.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2>STARTING WITH A SPECIFIC HTML</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p>HTML and CSS are two methods of tags (code), with their own unique syntax. There is a 
-difference between the two. You can think of HTML as a page layout, while CSS gives HTML 
-its own style.</p>
+<p>HTML and CSS are two methods of tags (code), with their own unique syntax. There is a difference 
+between the two. You can think of HTML as a page layout, while CSS gives HTML its own style.</p>
 
 <p>HTML = structure CSS = style</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2>LINKING YOUR HTML AND CSS FILES</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p>Before we can write CSS, we have to go back to HTML. You need to write a new line to link 
-the HTML file and CSS file together. So, open the HTML file and add the provided line 
-"&lt;link href =" style.css "rel =" stylesheet "type =" text / CSS "/&gt;". Your file code 
-looks like this,</p>
+<p>Before we can write CSS, we have to go back to HTML. You need to write a new line to link the 
+HTML file and CSS file together. So, open the HTML file and add the provided line "&lt;link href 
+=" style.css "rel =" stylesheet "type =" text / CSS "/&gt;". Your file code looks like this,</p>
 
 <pre>
 &lt;!DOCTYPE html&gt;
@@ -731,32 +728,32 @@ looks like this,</p>
 &lt;!&#45;- Here is the External Style Sheet &#45;-&gt;
 &lt;link type=&#34;text/CSS&#34; rel=&#34;stylesheet&#34; href=&#34;style.css&#34; /&gt;
 &lt;!&#45;- Here is the Internal Style &#45;-&gt;
-&lt;style&gt;
-h2, p {
-  font-size: 24px
-}
-h1 {
-  text-align: center; font-size: 36px;
-  font-family: &#39;Franklin Gothic Medium&#39;,
-  &#39;Arial Narrow&#39;, Arial, sans-serif;
-}
-.container {
-  align-items: center; max-width: 600px; max-height: auto; margin: 280px
-  auto;
-  border: 1px solid black; border-radius: 20px;
-  padding: 50px;
-}
-&lt;/style&gt;
+  &lt;style&gt;
+  h2, p {
+    font-size: 24px
+  }
+  h1 {
+    text-align: center; font-size: 36px;
+    font-family: &#39;Franklin Gothic Medium&#39;,
+    &#39;Arial Narrow&#39;, Arial, sans-serif;
+  }
+  .container {
+    align-items: center; max-width: 600px; max-height: auto; margin: 280px
+    auto;
+    border: 1px solid black; border-radius: 20px;
+    padding: 50px;
+  }
+  &lt;/style&gt;
 &lt;/head&gt;
 &lt;body&gt;
-&lt;div class=&#34;container&#34;&gt;
-  &lt;h1&gt; &lt;u&gt; This is an example of Simple CSS &lt;/u&gt;
-  &lt;/h1&gt;
-  &lt;!&#45;- Here is the Inline Style &#45;-&gt;
-  &lt;h2 style=&#34;color: red&#34;&gt; This is a heading
-  element &lt;/h2&gt;
-  &lt;p style=&#34;color: purple&#34;&gt; Hello world, this is a paragraph. &lt;/p&gt;
-&lt;/div&gt;
+  &lt;div class=&#34;container&#34;&gt;
+    &lt;h1&gt; &lt;u&gt; This is an example of Simple CSS &lt;/u&gt;
+    &lt;/h1&gt;
+    &lt;!&#45;- Here is the Inline Style &#45;-&gt;
+    &lt;h2 style=&#34;color: red&#34;&gt; This is a heading
+    element &lt;/h2&gt;
+    &lt;p style=&#34;color: purple&#34;&gt; Hello world, this is a paragraph. &lt;/p&gt;
+    &lt;/div&gt;
 &lt;/body&gt;
 &lt;html&gt;
 </pre>
@@ -12256,13 +12253,10 @@ be executed.</p>
 <h2>Bibliography</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <ol>
-  <li><a href="https://www.w3.org/standards/webdesign/htmlcss">HTML & CSS -- accessed on May 16, 2022</a>.</li>
+  <li><a href="https://www.w3.org/standards/webdesign/htmlcss">HTML & CSS-- accessed on May 16, 2022</a>.</li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS--accessed on May 16, 2022.</a>.</li>
+  <li><a href="https://en.wikipedia.org/wiki/CSS](https://en.wikipedia.org/">CSS Introduction --accessed on May 16, 2022</a>.</li>
 </ol>
-2.  CSS -- [https://developer.mozilla.org/en-US/docs/Web/CSS, accessed](https://developer.mozilla.org/) on May 16, 2022.
-
-3.  CSS Introduction --
-    [https://en.wikipedia.org/wiki/CSS](https://en.wikipedia.org/),
-    accessed on May 16, 2022.
 
 4.  HTMLand CSSBasic--
     [https://www3.ntu.edu.sg/home/ehchua/programming/](https://www3.ntu.edu.sg/)
@@ -12497,4 +12491,3 @@ Last Editted: 11/19/2025 10:06p</h6>
 </footer>
 </body>
 </html>
-v
