--- a/index.html
+++ b/index.html
@@ -1291,14 +1291,16 @@ a:hover {
 
 <p>In CSS, a color can be specified by using a pre-defined color name, such as,</p>
 
-1.  Tomato
-2.  Orange
-3.  Dodger Blue
-4.  Medium Sea Green
-5.  Gray
-6.  SlateBlue
-7.  Violet
-8.  LightGray
+<ol type="1">
+  <li>Tomato</li>
+  <li>Orange</li>
+  <li>Dodger Blue</li>
+  <li>Medium Sea Green</li>
+  <li>Gray</li>
+  <li>SlateBlue</li>
+  <li>Violet</li>
+  <li>LightGray</li>
+</ol>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h4>List of Color Values</h4>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -11211,25 +11213,22 @@ postCSSPresetEnv.process(YOUR_CSS /&#42;, processOptions, pluginOptions
 </pre>
 
 <h5>Various Options</h5>
+
 <ol type="1" start="1">
-  <li><b>stage</b>: This option determines which CSS features to polyfill,
-    based on the stability in the process of becoming implemented web
-    standards.</li>
+  <li><b>stage</b>: This option determines which CSS features to polyfill, based on the stability 
+    in the process of becoming implemented web standards.</li>
 </ol>
 
 <pre>postcssPresetEnv({ stage: 0 })</pre>
 
-<p>This stage can be 0 (experimental) through 4 (stable), or false. By
-setting stage to false will disable all polyfill. This would be useful
-if you intended to use the features option exclusively.</p>
+<p>This stage can be 0 (experimental) through 4 (stable), or false. By setting stage to false will 
+disable all polyfill. This would be useful if you intended to use the features option exclusively.</p>
 
 <p>Without any configuration options, PostCSS allows Preset Env Stage.</p>
 
 <ol type="1" start="2">
-  <li><b>features</b>: The features enable or
-    disable specific polyfills by ID. By passing true to a specific
-    feature ID will enable its polyfill, during passing false will
-    disable it.</li>
+  <li><b>features</b>: The features enable or disable specific polyfills by ID. By passing true to 
+    a specific feature ID will enable its polyfill, during passing false will disable it.</li>
 </ol>
 
 <p>There are various id available in this plugin as given below:</p>
@@ -11692,29 +11691,29 @@ processors: &#91; require(&#39;autoprefixer&#39;)(), require(&#39;lost&#39;)
 
 <p>PostCSS plugin generates spritesheets from your stylesheets.</p>
 
-<p>It is a software development tool that uses JavaScript-based plugins
-to automate routine CSS operations. It was previously designed by
-Andrey Sitnik with the idea carrying its origin in his front-end work
-for Evil Martians.</p>
+<p>It is a software development tool that uses JavaScript-based plugins to automate routine CSS 
+operations. It was previously designed by Andrey Sitnik with the idea carrying its origin in his 
+front-end work for Evil Martians.</p>
 
-<p>It is a framework to develop CSS tools. It can also be used to develop
-a template language such as Sass and LESS.</p>
+<p>It is a framework to develop CSS tools. It can also be used to develop a template language such 
+as Sass and LESS.</p>
 
 <p>The PostCSS has core components which are given as below:</p>
 
--   CSS parser generates an abstract syntax tree.
--   It is a set of classes that comprise the tree.
--   CSS generator generates a line for the object tree.
--   Code map generator for the changes made.
+<ul>
+  <li>CSS parser generates an abstract syntax tree.</li>
+  <li>It is a set of classes that comprise the tree.</li>
+  <li>CSS generator generates a line for the object tree.</li>
+  <li>Code map generator for the changes made.</li>
+</ul>
 
 <p>Features</p>
 
-<p>Plugins are small programs working with a tree of objects. After the
-core transforms the CSS string into a tree of objects, the plugins
-parse and modify the tree. Then PostCSS will generate a new CSS string
-for the tree changed by the plugin. PostCSS & its plugins are written
-in JavaScript and installed through npm, which offers an API for
-various low-level JavaScript operations.</p>
+<p>Plugins are small programs working with a tree of objects. After the core transforms the CSS 
+string into a tree of objects, the plugins parse and modify the tree. Then PostCSS will generate 
+a new CSS string for the tree changed by the plugin. PostCSS & its plugins are written in 
+JavaScript and installed through npm, which offers an API for various low-level JavaScript 
+operations.</p>
 
 <p>There are official tools that allow you to use <b>PostCSS</b> with build systems such as <b>Webpack</b>, 
 <b>Gulp</b>, and <b>Grunt</b>. A console interface is also available. <b>Browserify</b> or <b>Webpack</b> can use to
@@ -12484,10 +12483,11 @@ be executed.</p>
 </p>
 
 <footer>
-<h6>Create Date: 8/1/2025 12:00p<br>
-Last Editted: 9/16/2025 3:11a<br>
-Last Editted: 9/17/2025 12:26a<br>
-Last Editted: 11/19/2025 10:06p</h6>
+<h6>Create Date: 08/01/2025 12:00p<br>
+Last Editted: 09/16/2025 3:11a<br>
+Last Editted: 09/17/2025 12:26a<br>
+Last Editted: 11/19/2025 10:06p<br>
+Last Editted: 01/13/2026 11:31p</h6>
 </footer>
 </body>
 </html>
